RESOLVED FIXED57952
ClipboardWin has unused variables "ExceptionCode ec"
https://bugs.webkit.org/show_bug.cgi?id=57952
Summary ClipboardWin has unused variables "ExceptionCode ec"
Benjamin Poulain
Reported 2011-04-06 08:27:47 PDT
While lookint at 19385 I noticed ExceptionCode ec = 0; is never used in the function...
Attachments
Patch (1.15 KB, patch)
2011-04-06 08:29 PDT, Benjamin Poulain
kling: review-
Patch (1.43 KB, patch)
2011-04-06 08:35 PDT, Benjamin Poulain
no flags
Patch (1.43 KB, patch)
2011-04-06 08:36 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2011-04-06 08:29:21 PDT
Andreas Kling
Comment 2 2011-04-06 08:32:03 PDT
Comment on attachment 88430 [details] Patch There are more functions in that file doing this. :3
Benjamin Poulain
Comment 3 2011-04-06 08:35:53 PDT
Benjamin Poulain
Comment 4 2011-04-06 08:36:46 PDT
Created attachment 88432 [details] Patch Better with a changelog :)
WebKit Commit Bot
Comment 5 2011-04-06 10:16:49 PDT
The commit-queue encountered the following flaky tests while processing attachment 88432 [details]: http/tests/loading/basic-credentials-sent-automatically.html bug 57961 (author: beidson@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2011-04-06 10:19:50 PDT
Comment on attachment 88432 [details] Patch Clearing flags on attachment: 88432 Committed r83067: <http://trac.webkit.org/changeset/83067>
WebKit Commit Bot
Comment 7 2011-04-06 10:19:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.