2011-04-06  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Darin Adler.

        ClipboardWin has unused variables "ExceptionCode ec"
        https://bugs.webkit.org/show_bug.cgi?id=57952

        Remove the unused variable.

        * platform/win/ClipboardWin.cpp:
        (WebCore::ClipboardWin::declareAndWriteDragImage):
        (WebCore::ClipboardWin::writePlainText):

Canonical link: https://commits.webkit.org/72847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83067 268f45cc-cd09-0410-ab3c-d52691b4dbfc